platforms from latest develop branch

--- a/platforms/hyperledger-fabric/charts/ca/values.yaml
+++ b/platforms/hyperledger-fabric/charts/ca/values.yaml
@@ -94,8 +94,8 @@ service:
 
 annotations:
   #Extra annotations wanted
-  service: {}
-  pvc: {}
+  service: []
+  pvc: []
   
 proxy:
   #This will be the proxy/ingress provider. Can have values "ambassador" or "haproxy"
