--- a/platforms/hyperledger-fabric/charts/catools/templates/deployment.yaml
+++ b/platforms/hyperledger-fabric/charts/catools/templates/deployment.yaml
@@ -508,11 +508,11 @@ spec:
                 fi;
 
                 # Generate crypto material for organization orderers (for each orderer)
-                orderers=$(echo "$ORDERERS_NAMES" | tr "-" "\n")         
+                orderers=$(echo "$ORDERERS_NAMES" | tr "-" "\n")
                 for ORDERER_NAME in $orderers
                 do
                   if [ -e  ${MOUNT_PATH}/absent_msp_${ORDERER_NAME}.txt ]; then
-                      echo "need ejecute scripts for ${ORDERER_NAME} "
+                      echo "need to execute scripts for ${ORDERER_NAME} "
 
                       SK_NAME=$(find ${ORG_CYPTO_ORDERER_FOLDER}/${ORDERER_NAME}.${COMPONENT_NAME}/msp/keystore/ -name "*_sk")
                       if [ -n "$SK_NAME" ]; then
@@ -743,7 +743,7 @@ spec:
                   ./store-vault-orderer.sh
                 fi;
 
-                 if [ "$COMPONENT_TYPE" = "peer" ]; then
+                if [ "$COMPONENT_TYPE" = "peer" ]; then
                   # Generate crypto material for organization peers
                   cd /scripts/peer
                   ./store-vault-peer.sh
