--- a/platforms/hyperledger-fabric/charts/catools/values.yaml
+++ b/platforms/hyperledger-fabric/charts/catools/values.yaml
@@ -122,7 +122,7 @@ org_data:
   #Eg. Lodon
   component_location:
   #Provide organization's ca_url
-  #Eg. "ca.supplychain-net.org1.blockchaincloudpoc.com:8443"
+  #Eg. "ca.supplychain-net.org1.blockchaincloudpoc.com"
   ca_url:
   
 #Provide orderer's names
