--- a/platforms/hyperledger-fabric/charts/commit_chaincode/values.yaml
+++ b/platforms/hyperledger-fabric/charts/commit_chaincode/values.yaml
@@ -71,8 +71,8 @@ vault:
   tls:
 
 orderer:
-  #Provide the address for orderer
-  #Eg. address: orderer-ext.example-com:8443
+  #Provide the address for orderer including port
+  #Eg. address: orderer-ext.example-com:443
   address:
 
 chaincode:
